# MLMC-Proton-Therapy

./: .gitignore  CMakeLists.txt  CT_phantom.ipynb  HU2material.csv  HU2materialWater.csv  f.ipynb  watertank.ipynb
CT_phantom/: .desktop  Dose_centered.mha  fred.inp  rtplan_single.inp
include/: HU2material.hpp  error_logging.hpp  grids.hpp  kinematics.hpp  particles.hpp  pencilbeam.hpp  physics_constants.hpp  simulation.hpp  simulation_constants.hpp  treatmentplan.hpp  voxeltraversal.hpp
scripts/: HU2material.txt  compile_project.sh  generate_CT_phantom.py  generate_watertank_phantom.py
src/: HU2material.cpp  bindings.cpp  grids.cpp  kinematics.cpp  main.cpp  main_old.cpp  particles.cpp  pencilbeam.cpp  simulation.cpp  treatmentplan.cpp  voxeltraversal.cpp
